# huawei-ascend-variant-provider

./: .gitignore  LICENSE  README.md  pyproject.toml
ascend_variant_provider/: __init__.py  detect_cann.py  plugin.py  pysmi.py
docs/: index.html
docs/huawei_ascend_variant_provider/: huawei_ascend_variant_provider-0.0.2-py3-none-any.whl  index.html
huawei_ascend_variant_provider/: detect_cann.py  plugin.py  pysmi.py
